Fix high contrast mode to display characters for left/right/menu buttons instead of trying to display icons.
Also start work on getting RTL mode working (although it's still not really usable).   Although the code referred to "previous" and "next" buttons they seemed closer to actually being left and right buttons (regardless of dir setting), so I changed the names.   There are still issues though with scrollLeft meaning different things on different browsers etc. and lots of rendering problems for the ScrollingTabController when in RTL mode.

Refs #9004 !strict.

Remaining issues include:
  - high contrast mode
  - RTL mode

git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@19740 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1123,18 +1123,26 @@ img.dijitColorPaletteUnder {
 	width: 50000px;
 	display: block;
 }
-.dijitTabContainer .tabStripMenuButton, 
-.dijitTabContainer .tabStripSlideButtonNext {
-	/* TODO: this is not BIDI ready */
+.dijitTabContainer .tabStripMenuButton {
 	float: right;
 }
-.dijitTabContainer .tabStripSlideButtonPrev {
-	/* TODO: this is not BIDI ready */
+.dijitRtl .dijitTabContainer .tabStripMenuButton {
+	float: left;
+}
+.dijitTabContainer .tabStripSlideButtonRight {
+	float: right;
+}
+.dijitTabContainer .tabStripSlideButtonLeft {
 	float: left;
 }
 .dijitTabContainer .dijitTabListWrapper {
 	float: left;
 	overflow: hidden;
+}
+
+.dijit_a11y .dijitTabContainer .tabStripButton img {
+	/* hide the icons (or rather the empty space where they normally appear) because text will appear instead */
+	display: none;
 }
 
 .dijitTabContainerTop-tabs {
@@ -1238,7 +1246,6 @@ div.dijitTabBtnDisabled img {
 .dijitTab .closeButton {
 	margin-left: 1em;
 }
-
 
 /* images off, high-contrast mode styles */
 .dijitTab .closeText {
