--- a/themes/nihilo/layout/TabContainer.css
+++ b/themes/nihilo/layout/TabContainer.css
@@ -492,7 +492,7 @@
 	background-image: url(../images/spriteRoundedIconsSmall.gif);
 }
 
-.nihilo .dijitTabContainer .tabStripSlideButtonNext img {
+.nihilo .dijitTabContainer .tabStripSlideButtonRight img {
 	background-position: -30px top;
 }
 
